[project]
name = "author-infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fugashi>=1.5.1",
    "ipadic>=1.0.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "scipy>=1.11.0",
    "openpyxl>=3.1.5",
    "statsmodels>=0.14.5",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "regex>=2025.9.18",
]
